fixing own remarks